libraries/ckit/regression/valid-programs/a209.c
struct qqux {int x;};

main (){

  unsigned int x;
}
