libraries/ckit/regression/invalid-programs/a208.c
struct qqux {int x;};

main (){

  struct qqux int x;
}
